--- a/templates/index.html
+++ b/templates/index.html
@@ -91,8 +91,8 @@
         </div>
         <div class="footer-contacts">
           <h3>Контакты</h3>
-          <p>г. Москва, ул. Сладкая, 15</p>
-          <p>+7 (999) 123-45-67</p>
+          <p>г. Москва, ул. ...</p>
+          <p>+7 (111) 23-33-44</p>
         </div>
       </div>
       <div class="copyright">
