--- a/templates/index.html
+++ b/templates/index.html
@@ -33,24 +33,29 @@
 
     <section class="slider-section section-spacing">
       <div class="container">
-        <h2 class="section-title">Наши хиты продаж</h2>
-        <div class="slider">
-          <div class="slides">
-            {% for cake in slider_cakes %}
-            <div class="slide">
-              <img src="{{ url_for('static', filename='data/images/cakes/' + cake.image) }}" alt="{{ cake.name }}">
-              <div class="slide-caption">
-                <h3>{{ cake.name }}</h3>
-                <p>от {{ cake.price }} руб.</p>
+          <h2 class="section-title">Наши хиты продаж</h2>
+          <div class="slider">
+              <div class="slides">
+                  {% for cake in slider_cakes %}
+                  <div class="slide">
+                      <div class="slide-content">
+                          <div class="slide-image">
+                              <img src="{{ url_for('static', filename='images/cakes/' + cake.image) }}" alt="{{ cake.name }}">
+                          </div>
+                          <div class="slide-info">
+                              <h3 class="cake-title">{{ cake.name }}</h3>
+                              <p class="cake-description">{{ cake.description }}</p>
+                              <div class="cake-price">от {{ cake.price }} ₽</div>
+                          </div>
+                      </div>
+                  </div>
+                  {% endfor %}
               </div>
-            </div>
-            {% endfor %}
+              <button class="slider-btn prev">❮</button>
+              <button class="slider-btn next">❯</button>
           </div>
-          <button class="slider-btn prev">❮</button>
-          <button class="slider-btn next">❯</button>
-        </div>
       </div>
-    </section>
+  </section>
 
     <section class="gallery section-spacing">
       <div class="container">
