дизайн, доработка меню

--- a/templates/about.html
+++ b/templates/about.html
@@ -101,7 +101,7 @@
         </div>
         <div class="footer-contacts">
           <h3>Контакты</h3>
-          <p>г. Москва, ул. ...</p>
+          <p>г. Москва, ул. Кондитерская, 15</p>
           <p>+7 (111) 23-33-44</p>
         </div>
       </div>
