--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                               <h3 class="cake-title">{{ cake.name }}</h3>
                               <p class="cake-description">{{ cake.description }}</p>
                               <div class="cake-price">от {{ cake.price }} ₽</div>
-                              <a href="{{ url_for('contact') }}" class="slide-order-btn">Заказать</a>
+                              <a href="{{ url_for('contact') }}" class="btn small">Заказать</a>
                           </div>
                       </div>
                   </div>
@@ -93,7 +93,7 @@
         </div>
         <div class="footer-contacts">
           <h3>Контакты</h3>
-          <p>г. Москва, ул. ...</p>
+          <p>г. Москва, ул. Кондитерская, 15</p>
           <p>+7 (111) 23-33-44</p>
         </div>
       </div>
