--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                               <h3 class="cake-title">{{ cake.name }}</h3>
                               <p class="cake-description">{{ cake.description }}</p>
                               <div class="cake-price">от {{ cake.price }} ₽</div>
-                              <a href="{{ url_for('contact') }}" class="btn small">Заказать</a>
+                              <a href="#modal-slider-{{ loop.index }}" class="btn small">Заказать</a>
                           </div>
                       </div>
                   </div>
@@ -54,7 +54,7 @@
               </div>
           </div>
       </div>
-  </section>
+    </section>
 
     <section class="gallery section-spacing">
       <div class="container">
@@ -67,7 +67,7 @@
               <h3>{{ cake.name }}</h3>
               <p class="description">{{ cake.description }}</p>
               <p class="price">{{ cake.price }} руб.</p>
-              <a href="#" class="btn small">Заказать</a>
+              <a href="#modal-gallery-{{ loop.index }}" class="btn small">Заказать</a>
             </div>
           </div>
           {% endfor %}
@@ -98,11 +98,37 @@
         </div>
       </div>
       <div class="copyright">
-        <p>&copy; 2025 Cake Store. Все права защищены.</p>
+        <p>© 2025 Cake Store. Все права защищены.</p>
       </div>
     </div>
   </footer>
 
-  <script src="{{ url_for('static', filename='js/slider.js') }}"></script>
+  <!-- Модальные окна для слайдера -->
+  {% for cake in slider_cakes %}
+  <div id="modal-slider-{{ loop.index }}" class="modal">
+    <div class="modal-content">
+      <a href="#" class="modal-close">×</a>
+      <img src="{{ url_for('static', filename='images/cakes/' + cake.image) }}" alt="{{ cake.name }}" class="modal-image">
+      <h3 class="modal-title">{{ cake.name }}</h3>
+      <p class="modal-description">{{ cake.description }}</p>
+      <p class="modal-price">от {{ cake.price }} ₽</p>
+      <a href="#pay" class="btn small modal-pay-button">Оплатить</a>
+    </div>
+  </div>
+  {% endfor %}
+
+  <!-- Модальные окна для галереи -->
+  {% for cake in popular_cakes %}
+  <div id="modal-gallery-{{ loop.index }}" class="modal">
+    <div class="modal-content">
+      <a href="#" class="modal-close">×</a>
+      <img src="{{ url_for('static', filename='images/cakes/' + cake.image) }}" alt="{{ cake.name }}" class="modal-image">
+      <h3 class="modal-title">{{ cake.name }}</h3>
+      <p class="modal-description">{{ cake.description }}</p>
+      <p class="modal-price">{{ cake.price }} руб.</p>
+      <a href="#pay" class="btn small modal-pay-button">Оплатить</a>
+    </div>
+  </div>
+  {% endfor %}
 </body>
 </html>
