--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <h2>Авторские торты на заказ</h2>
                 <p class="hero-subtitle">Создаем сладкие шедевры по вашим пожеланиям</p>
-                <a href="{{ url_for('menu') }}" class="btn">Сделать заказ</a> <!-- Updated link to /menu -->
+                <a href="{{ url_for('menu') }}" class="btn">Сделать заказ</a>
             </div>
         </section>
 
