--- a/templates/cart.html
+++ b/templates/cart.html
@@ -41,7 +41,7 @@
                 </div>
                 <div style="text-align: center; margin-top: 40px;">
                     <p class="price">Общая сумма: {{ cart|sum(attribute='total') }} руб.</p>
-                    <a href="{{ url_for('checkout') }}" class="btn">Оформить заказ</a> <!-- Updated link -->
+                    <a href="{{ url_for('checkout') }}" class="btn">Оформить заказ</a>
                 </div>
                 {% else %}
                 <p style="text-align: center; font-size: 1.2rem;">Ваша корзина пуста.</p>
